Bug 10315 - Use easier readable font for generated passwords
The text inputs on the change password form are not very big, and the
default sans-serif font isn't always good for showing unambiguous
characters. This patch sets a larger, monospace font for those fields.

To test, apply the patch, clear your browser cache, and open the patron
change password form (members/member-password.pl). The inputs should be
more readable, especially the password fields when you click to fill
with a randomly generated password.

(cherry picked from commit 1a15b26e65fb57c622ed11cb0c7459516e6e023c)

--- a/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
@@ -2562,3 +2562,9 @@ fieldset.rows table.mceListBox {
 #selections span { margin:3px;padding:3px;background-color:#EBF3FF;-moz-border-radius:5px;border-radius:5px;white-space:nowrap;line-height:240%;font-size:75%; }
 #selections span.selected { background-color : #CCE0FC; }
 #selections input { vertical-align:middle;margin:0 2px; }
+#changepasswordf input[type="text"],
+#changepasswordf input[type="password"] {
+    font-size: 140%;
+    font-family : monospace;
+    padding : .3em;
+}
